Added resource files

--- a/src/test/robot/report.html
+++ b/src/test/robot/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,14522],[],[[5,0,1,0,[],[1,238,3677],[]],[6,0,1,0,[],[0,3919,9,7],[]],[8,0,1,0,[],[0,3933,1349,9],[]],[10,0,1,0,[],[0,5290,1167,11],[]],[12,0,1,0,[],[0,6457,1176,13],[]],[14,0,1,0,[],[0,7633,1183,13],[]],[15,0,1,0,[],[0,8816,1153,13],[]],[16,0,1,0,[],[0,9974,1177,13],[]],[17,0,1,0,[],[0,11152,1180,18],[]],[19,0,1,0,[],[1,12333,2187],[]]],[],[10,2,10,2]];
+window.output["suite"] = [1,2,3,4,[],[0,0,5746],[],[[5,0,1,0,[],[1,272,3821],[]],[6,0,1,0,[],[1,4094,678],[]],[7,0,1,0,[],[1,4773,257],[]],[8,0,1,0,[],[0,5031,481,9],[]],[10,0,1,0,[],[1,5513,232],[]]],[],[5,4,5,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Admin002","*C:\\Users\\nesrstova\\Desktop\\KNE\\Robot\\Admin002.robot","*Admin002.robot","*<p>This is test to TC Admin002\x3c/p>","*Open page","*Login","*No keyword with name 'Login' found. Did you mean:\n    BuiltIn.Log","*Open Cypher list","*Link with locator '//a[@href=\"/admin/cypher\"]' not found.","*Add Cypher","*Element with locator '//a[@href=\"/admin/cypher/add\"]' not found.","*Check Detail page","*Element with locator '//tr[contains(.,'Tomas Bata')]//td[1]' not found.","*Edit Cypher","*Add hint","*Delete cypher","*Logout","*Element with locator '//a[@href='/logout']' not found.","*Browser Shutdown"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TeamKeywords","*C:\\Users\\nesrstova\\Desktop\\KNE\\Robot\\TeamKeywords.robot","*TeamKeywords.robot","*<p>Open Lusteniny page, Login as a team, Logout, Close browser, Open list Sifry, Karticka, Kontakty, Odhlasit\x3c/p>","*Open Lusteniny Page","*Login","*Open List Sifry","*Open List Karticka","*ElementNotVisibleException: Message: element not interactable\n  (Session info: chrome=74.0.3729.169)\n  (Driver info: chromedriver=2.42.591088 (7b2b2dca23cca0862f674758c9a3933e685c27d5),platform=Windows NT 10.0.17763 x86_64)\n","*Open List Kontakty"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":8,"label":"Critical Tests","pass":2},{"elapsed":"00:00:14","fail":8,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:15","fail":8,"id":"s1","label":"Admin002","name":"Admin002","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"Critical Tests","pass":4},{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":4}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"TeamKeywords","name":"TeamKeywords","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1559132062137;
+window.output["baseMillis"] = 1559140118252;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14534;
+window.output["generated"] = 5758;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
